When a document's scope object changes (e.g., for a call to document.open), actually change the scope object and move all of the wrappers in the old scope into the new one. bug 333697, r+sr=jst