content/base/public/nsIDocument.h
@@ -480,9 +480,10 @@ public:
 
   /**
    * Get the object that is used as the scope for all of the content
-   * wrappers whose owner document is this document. Unlike the script
-   * global object, this never changes once it's set. Use this object
-   * when you're trying to find a content wrapper in XPConnect.
+   * wrappers whose owner document is this document. Unlike the script global
+   * object, this will only return null when the global object for this
+   * document is truly gone. Use this object when you're trying to find a
+   * content wrapper in XPConnect.
    */
   virtual nsIScriptGlobalObject* GetScopeObject() = 0;
 
